--- a/about.html
+++ b/about.html
@@ -6,5 +6,5 @@ title: "About"
 <section class="content">
   <h1>{{ site.name }}</h1>
 
-  <p>I'm a software engineer living in Paris, France. I'm currently working at Novaquark as a game engine programer</p>
+  <p>I'm a software engineer living in Paris, France. I'm currently working at <a href="http://http://www.novaquark.com/">Novaquark</a> as a game engine programer</p>
 </section>
